[gd_scene load_steps=11 format=2]

[ext_resource path="res://Personajes/PersonajeBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/PantallaPersonalizacion.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI Base Pack/PNG/grey_button13.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Kenney Rocket.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI Base Pack/PNG/blue_button07.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI Base Pack/PNG/red_button00.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0901961, 0.0627451, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.109804, 0.247059, 0.333333, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="PantallaPersonalizacion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.603922, 0.619608, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 20, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonajeBase" parent="CenterContainer" instance=ExtResource( 1 )]
position = Vector2( 21.5756, 20.6766 )

[node name="AtributosPersonaje" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1004.0
margin_top = -223.0
margin_right = -662.0
margin_bottom = 223.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atributos" type="Label" parent="AtributosPersonaje"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HistoriaPersonaje" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -362.725
margin_top = -223.0
margin_right = -20.7245
margin_bottom = 223.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Historia" type="Label" parent="HistoriaPersonaje"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 20.0
margin_top = 30.8776
margin_right = 220.0
margin_bottom = 50.8776
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "El guarro"
items = [ "El guarro", null, false, 0, null, "El \"Bond\"", null, false, 1, null, "El pitufo", null, false, 2, null, "El marrón ", null, false, 3, null, "El don", null, false, 4, null, "El freso", null, false, 5, null, "El Ben Grill", null, false, 6, null, "El walking dead", null, false, 7, null, "La naturista", null, false, 8, null, "La doña", null, false, 9, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrearJugador" type="TextureButton" parent="."]
margin_left = 413.0
margin_top = 494.0
margin_right = 626.0
margin_bottom = 534.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CrearJugador"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "¡Sobrevive!"
align = 1
valign = 1

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="CrearJugador" to="." method="_on_CrearJugador_pressed"]
